--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "homepage": "http://Konstantin-Kolom.github.io/react-lessons",
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@reach/menu-button": "^0.16.1",
+    "@reach/tooltip": "^0.16.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.24.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
